Adding simplegrid.css and basic responsive grid layout in section about, skills and project

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -183,3 +183,30 @@ header .row {
     font-size: 1.3rem;
 }
 
+/* ----------------------------------------------- */
+/* ---------------- ABOUT SECTION ---------------- */
+/* ----------------------------------------------- */
+
+.red {
+    background-color: red;
+    width: 100%;
+    height: 200px;
+}
+
+.green {
+    background-color: green;
+    width: 100%;
+    height: 200px;
+}
+
+.yellow {
+    background-color: yellow;
+    width: 100%;
+    height: 200px;
+}
+
+.blue {
+    background-color: blue;
+    width: 100%;
+    height: 200px;
+}
