--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,8 @@
 :root {
     --primary-color: rgba(13, 110, 139, 1); /*  */
     --overlay-color: rgba(24, 39, 51, 0.85);
-    --font-color: rgb(155, 155, 155, 1);
+    --font-color: #a5a5a5;
+    --slightly-white: #f8f8f8;
     --menu-speed: 0.75s;
 }
 
@@ -115,7 +116,8 @@ p {
 
 /* ------------------- BUTTONS ------------------- */
 
-.btn {
+.btn,
+input[type="submit"] {
     padding: 10px;
     border: 3px solid var(--overlay-color);
     transition: all 0.2s ease-in-out;
@@ -128,14 +130,17 @@ p {
     padding: 6px 10px;
 }
 
-.btn-full {
+.btn-full,
+input[type="submit"]{
     color: #FFF;
     border-radius: 10px;
     background-color: var(--overlay-color);
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type="submit"]:hover,
+input[type="submit"]:active {
     color: var(--overlay-color);
     background-color: transparent;
 }
@@ -251,7 +256,7 @@ header .row {
 /* ----------------------------------------------- */
 
 .section-skills {
-    background-color: #f8f8f8;
+    background-color: var(--slightly-white);
 }
 
 .section-skills .box {
@@ -309,6 +314,10 @@ header .row {
 /* --------------- PROJECTS SECTION -------------- */
 /* ----------------------------------------------- */
 
+.section-projects {
+    padding: 60px 0 0 0;
+}
+
 .projects-showcase {
     list-style: none;
     width: 100%;
@@ -354,6 +363,75 @@ header .row {
 /* ----------------------------------------------- */
 /* --------------- CONTACT SECTION --------------- */
 /* ----------------------------------------------- */
+
+.section-contact {
+    padding: 0 0 60px 0;
+}
+
+.contact-container {
+    position: relative;
+    width: 40%;
+    margin: 0 30%;
+    height: auto;
+    /*background-color: var(--slightly-white);*/
+    box-sizing: border-box;
+    padding: 60px;
+    /*box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);*/
+}
+
+.contact-container input[type=text]{
+    padding: 10px 0;
+    margin-bottom: 60px;
+}
+
+.contact-container textarea {
+    padding: 10px 0;
+    max-height: 600px;
+    min-height: 50px;
+    max-width: 100%;
+    min-width: 100%;
+}
+
+.contact-container input[type=text],
+.contact-container textarea {
+    font-family: 'Roboto', 'Arial', sans-serif;
+    font-size: 120%;
+    width: 100%;
+    box-sizing: border-box;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    border-bottom: 2px solid var(--primary-color);
+}
+
+.contact-container input[type=submit] {
+    width: 100%;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+.contact-container form div {
+    position: relative;
+}
+
+.contact-container form div label {
+    position: absolute;
+    font-size: 120%;
+    top: 10px;
+    left: 0;
+    pointer-events: none;
+    transition: all 0.5s ease-in-out;
+}
+
+.contact-container input[type=text]:focus ~ label,
+.contact-container input[type=text]:valid ~ label,
+.contact-container textarea:focus ~ label,
+.contact-container textarea:valid ~ label {
+    top: -20px;
+    left: 0;
+    color: var(--primary-color);
+} 
 
 
 /* ----------------------------------------------- */
