--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,8 @@
 /* ----------------------------------------------- */
 
 :root {
-    --primary-color: rgba(13, 110, 139, 1); /*  */
+    --primary-color: rgba(13, 110, 139, 1);
+    /*  */
     --overlay-color: rgba(24, 39, 51, 0.85);
     --font-color: #a5a5a5;
     --slightly-white: #f8f8f8;
@@ -33,7 +34,10 @@ html {
     overflow-y: scroll;
 }
 
-.clearfix {zoom: 1;}
+.clearfix {
+    zoom: 1;
+}
+
 .clearfix:after {
     content: '.';
     clear: both;
@@ -59,12 +63,14 @@ footer {
 }
 
 /* ------------------- HEADINGS ------------------ */
-h1, h2 {
+h1,
+h2 {
     font-family: 'Roboto', 'Arial', sans-serif;
     letter-spacing: 4px;
 }
 
-h2, h3 {
+h2,
+h3 {
     font-weight: 300;
 }
 
@@ -131,7 +137,7 @@ input[type="submit"] {
 }
 
 .btn-full,
-input[type="submit"]{
+input[type="submit"] {
     color: #FFF;
     /*border-radius: 10px;*/
     background-color: var(--overlay-color);
@@ -192,7 +198,7 @@ header .row {
     top: 0;
     width: 100%;
     background-color: var(--primary-color);
-    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
     transition: background-color 0.5s ease-in-out;
     transition: box-shadow 1s ease-in-out;
     z-index: 4;
@@ -290,7 +296,7 @@ header .row {
 
 .section-resume {
     background-color: var(--primary-color);
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     text-align: center;
 }
 
@@ -299,7 +305,7 @@ header .row {
     color: #FFF;
 }
 
-.section-resume p{
+.section-resume p {
     font-size: 100%;
     text-align: center;
     margin-bottom: 30px;
@@ -318,46 +324,16 @@ header .row {
     padding: 60px 0 0 0;
 }
 
-.projects-showcase {
-    list-style: none;
-    width: 100%;
-}
-
-.projects-showcase li {
-    display: block;
-    float: left;
-    width: 50%;
-}
-
-.project-photo {
-    width: 100%;
-    height: 60vh;
-    margin: 0;
-    overflow: hidden;
-}
-
-.red {
-    width: inherit;
-    height: inherit;
-    background-color: red;
-}
-
-.green {
-    width: inherit;
-    height: inherit;
-    background-color: green;
-}
-
 .blue {
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 400px;
     background-color: blue;
 }
 
-.yellow {
-    width: inherit;
-    height: inherit;
-    background-color: yellow;
+.red {
+    width: 100%;
+    height: 400px;
+    background-color: red;
 }
 
 #more-projects {
@@ -383,8 +359,8 @@ header .row {
 
 .contact-container {
     position: relative;
-    width: 40%;
-    margin: 0 30%;
+    width: 700px;
+    margin: 0 auto;
     height: auto;
     /*background-color: var(--slightly-white);*/
     box-sizing: border-box;
@@ -392,7 +368,7 @@ header .row {
     /*box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);*/
 }
 
-.contact-container input[type=text]{
+.contact-container input[type=text] {
     padding: 10px 0;
     margin-bottom: 60px;
 }
@@ -409,6 +385,7 @@ header .row {
 .contact-container input[type=text],
 .contact-container textarea {
     font-family: 'Roboto', 'Arial', sans-serif;
+    color: var(--font-color);
     font-size: 120%;
     width: 100%;
     box-sizing: border-box;
@@ -431,6 +408,7 @@ header .row {
 
 .contact-container form div label {
     position: absolute;
+    color: var(--font-color);
     font-size: 120%;
     top: 10px;
     left: 0;
@@ -445,7 +423,7 @@ header .row {
     top: -20px;
     left: 0;
     color: var(--primary-color);
-} 
+}
 
 
 /* ----------------------------------------------- */
@@ -454,7 +432,7 @@ header .row {
 
 footer {
     background-color: var(--primary-color);
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     color: #FFF;
     padding-bottom: 0;
 }
@@ -481,7 +459,7 @@ footer p {
 }
 
 .footer-nav li,
-.footer-nav-social-links li{
+.footer-nav-social-links li {
     display: inline-block;
     margin-right: 20px;
 }
@@ -490,7 +468,7 @@ footer p {
     margin-right: 0;
 }
 
-.footer-nav-social-links li:first-of-type{
+.footer-nav-social-links li:first-of-type {
     margin-right: 0;
 }
 
@@ -521,3 +499,5 @@ footer p {
     padding: 10px 0;
     margin: 0;
 }
+
+
