--- a/resources/css/menu.css
+++ b/resources/css/menu.css
@@ -22,7 +22,7 @@
     z-index: 2;
     width: 60px;
     height: 60px;
-    padding: 1rem;
+    padding: 0 15px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -163,7 +163,7 @@
 .menu-wrap .menu > div > div > ul > li {
     list-style: none;
     color: #FFF;
-    font-size: 1.5rem;
+    font-size: 120%;
     padding: 1rem;
 }
 
