--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,8 +5,9 @@
 :root {
     --primary-color: rgba(0, 182, 180, 1);
     --primary-color-dark: rgba(0, 148, 146, 1);
+    --primary-color-light: rgba(0, 182, 180, 0.4);
     --overlay-color: rgba(0, 0, 0, 0.6);
-    --font-color: #a5a5a5;
+    --font-color: #969696;
     --slightly-white: #f8f8f8;
     --menu-speed: 0.75s;
 }
@@ -25,7 +26,8 @@
 html,
 body {
     font-family: 'Roboto', 'Arial', sans-serif;
-    line-height: 1.4;
+    line-height: 1.5;
+    font-size: 20px;
     text-rendering: optimizeLegibility;
 }
 
@@ -64,23 +66,24 @@ footer {
 
 /* ------------------- HEADINGS ------------------ */
 h1,
-h2 {
+h2{
     font-family: 'Roboto', 'Arial', sans-serif;
     letter-spacing: 4px;
 }
 
 h2,
-h3 {
+h3,
+h4 {
     font-weight: 300;
 }
 
 h1 {
-    font-size: 4em;
+    font-size: 400%;
 }
 
 h2 {
     color: var(--font-color);
-    font-size: 2.5em;
+    font-size: 200%;
     position: relative;
 }
 
@@ -88,10 +91,10 @@ h2:before,
 h2:after {
     display: inline-block;
     content: "";
-    border-top: 0.1rem solid var(--primary-color);
+    border-top: 2px solid var(--primary-color);
     width: 60px;
-    margin: 0 1rem;
-    transform: translateY(-0.9rem);
+    margin: 0 15px;
+    transform: translateY(-12px);
 }
 
 /* ------------------- SECTIONS ------------------ */
@@ -104,7 +107,8 @@ section h2 {
 /* ------------------ PARAGRAPHS ----------------- */
 
 p {
-    font-size: 1rem;
+    font-size: 80%;
+    letter-spacing: 1px;
 }
 
 /* -------------------- LOGOS -------------------- */
@@ -127,13 +131,13 @@ input[type="submit"] {
     padding: 10px;
     border: 3px solid var(--primary-color-dark);
     transition: all 0.2s ease-in-out;
-    font-size: 120%;
+    font-size: 100%;
     text-decoration: none;
 }
 
 .btn-ghost {
     border-radius: 50%;
-    padding: 6px 10px;
+    padding: 4px 10px;
 }
 
 .btn-full,
@@ -184,6 +188,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 /*header {
@@ -252,12 +257,9 @@ header .row {
     height: 100%;
 }
 
-.showcase h1 {
-    font-size: 4rem;
-}
-
 .showcase p {
-    font-size: 1.3rem;
+    width: 90%;
+    font-size: 90%;
 }
 
 .showcase .btn {
@@ -270,10 +272,43 @@ header .row {
 /* ---------------- ABOUT SECTION ---------------- */
 /* ----------------------------------------------- */
 
+.section-about {
+    color: var(--font-color);
+}
+
 .section-about .box {
-    background-color: #000;
+    /*background-color: #000;*/
+    position: relative;
     width: 100%;
-    height: 500px;
+    height: 600px;
+}
+
+.section-about h3 {
+    font-size: 2em;
+    line-height: 35px;
+    margin-bottom: 40px;
+}
+
+.section-about span {
+    font-weight: 400;
+    color: #5f5f5f;
+}
+
+.section-about p {
+    font-size: 90%;
+}
+
+.signature {
+    width: 300px;
+    height: auto;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+.profile-image {
+    height: 100%;
+    width: 100%;
 }
 
 /* ----------------------------------------------- */
@@ -287,27 +322,32 @@ header .row {
 .section-skills .box {
     /*background-color: #000;*/
     width: 100%;
-    height: 300px;
+    height: auto;
     color: var(--font-color);
     text-align: center;
 }
 
 .section-skills i {
-    font-size: 400%;
-    margin-top: 20px;
+    font-size: 300%;
+    /*margin-top: 20px;*/
     color: var(--primary-color);
 }
 
 .section-skills h3 {
     margin: 10px 0;
-    font-size: 150%
+    font-size: 120%
 }
 
 .section-skills p {
-    font-size: 100%;
     text-align: justify;
     padding: 0 15px;
 }
+
+/* ----------------------------------------------- */
+/* -------------- EXPERIENCE SECTION ------------- */
+/* ----------------------------------------------- */
+
+
 
 /* ----------------------------------------------- */
 /* ---------------- RESUME SECTION --------------- */
@@ -325,9 +365,8 @@ header .row {
 }
 
 .section-resume p {
-    font-size: 100%;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .section-resume h2:before,
@@ -365,7 +404,7 @@ header .row {
 
 .section-projects .btn {
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 18px;
     color: var(--primary-color-dark);
 }
 
@@ -378,18 +417,13 @@ header .row {
 /* --------------- CONTACT SECTION --------------- */
 /* ----------------------------------------------- */
 
-.section-contact {
-    padding: 0 0 60px 0;
-}
-
 .contact-container {
     position: relative;
-    width: 700px;
+    width: 40%;
     margin: 0 auto;
     height: auto;
     /*background-color: var(--slightly-white);*/
     box-sizing: border-box;
-    padding: 60px;
     /*box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);*/
 }
 
@@ -401,8 +435,8 @@ header .row {
 .contact-container textarea {
     padding: 10px 0;
     max-height: 600px;
-    height: 45px;
-    min-height: 45px;
+    height: 47px;
+    min-height: 47px;
     max-width: 100%;
     min-width: 100%;
 }
@@ -411,7 +445,7 @@ header .row {
 .contact-container textarea {
     font-family: 'Roboto', 'Arial', sans-serif;
     color: var(--font-color);
-    font-size: 120%;
+    font-size: 100%;
     width: 100%;
     box-sizing: border-box;
     box-shadow: none;
@@ -423,7 +457,7 @@ header .row {
 
 .contact-container input[type=submit] {
     width: 100%;
-    margin-top: 30px;
+    margin-top: 40px;
     cursor: pointer;
 }
 
@@ -434,7 +468,7 @@ header .row {
 .contact-container form div label {
     position: absolute;
     color: var(--font-color);
-    font-size: 120%;
+    font-size: 100%;
     top: 10px;
     left: 0;
     pointer-events: none;
@@ -509,7 +543,7 @@ footer p {
 }
 
 .footer-nav-social-links li i {
-    font-size: 150%;
+    font-size: 120%;
 }
 
 .footer-nav li a:hover,
