--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -59,6 +59,11 @@ html {
     /*background: #bc1818;*/
 }
 
+.flexbox {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
 section,
 footer {
     padding: 60px 0;
@@ -66,7 +71,7 @@ footer {
 
 /* ------------------- HEADINGS ------------------ */
 h1,
-h2{
+h2 {
     font-family: 'Roboto', 'Arial', sans-serif;
     letter-spacing: 4px;
 }
@@ -276,15 +281,28 @@ header .row {
     color: var(--font-color);
 }
 
-.section-about .box {
-    /*background-color: #000;*/
+.about-image-box,
+.about-text-box {
     position: relative;
-    width: 100%;
-    height: 600px;
+    height: 500px;
+    width: auto;
+    margin-bottom: 0;
+}
+
+.about-image-box {
+    height: 500px;
+    width: 40%;
+    text-align: center;
+}
+
+
+.about-text-box {
+    width: 60%;
+    padding-left: 50px;
 }
 
 .section-about h3 {
-    font-size: 2em;
+    font-size: 200%;
     line-height: 35px;
     margin-bottom: 40px;
 }
@@ -299,17 +317,19 @@ header .row {
 }
 
 .signature {
-    width: 300px;
+    /*transform: rotate(-2deg);*/
+    width: 400px;
     height: auto;
     position: absolute;
-    left: 0;
+    right: 0;
     bottom: 0;
 }
 
 .profile-image {
+    width: 90%;
     height: 100%;
-    width: 100%;
 }
+
 
 /* ----------------------------------------------- */
 /* ---------------- SKILLS SECTION --------------- */
