--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,5 +1,10 @@
+/* On screens that are 1399px or less */
 @media only screen and (max-width: 1399px) {
 
+/* ----------------------------------------------- */
+/* ---------------- ABOUT SECTION ---------------- */
+/* ----------------------------------------------- */
+    
     .section-about h3 {
         font-size: 170%;
         margin-bottom: 20px;
@@ -8,19 +13,45 @@
     .section-about p {
         line-height: 130%;
     }
-    
+
     .profile-image {
         width: 100%;
     }
 
+/* ----------------------------------------------- */
+/* ---------------- SKILLS SECTION --------------- */
+/* ----------------------------------------------- */
+    
+    .section-skills i {
+        font-size: 250%;
+    }
+    
+    .section-skills h3 {
+        font-size: 100%
+    }
+    
+    .section-skills p {
+        font-size: 75%;
+        line-height: 130%;
+    }
+
 }
 
+/* On screens that are 991px or less */
 @media only screen and (max-width: 991px) {
 
+/* ----------------------------------------------- */
+/* ------------- REUSABLE COMPONENTS ------------- */
+/* ----------------------------------------------- */    
+    
     .flexbox {
         flex-wrap: wrap;
     }
 
+/* ----------------------------------------------- */
+/* ---------------- ABOUT SECTION ---------------- */
+/* ----------------------------------------------- */    
+    
     .about-image-box {
         width: 100%;
     }
@@ -34,10 +65,32 @@
     .profile-image {
         width: 70%;
     }
+
+/* ----------------------------------------------- */
+/* ---------------- SKILLS SECTION --------------- */
+/* ----------------------------------------------- */
+    
+    .section-skills i {
+        font-size: 350%;
+    }
+    
+    .section-skills h3 {
+        font-size: 150%
+    }
+    
+    .section-skills p {
+        font-size: 90%;
+        line-height: 150%;
+    }
 }
 
+/* On screens that are 767px or less */
 @media only screen and (max-width: 767px) {
 
+/* ----------------------------------------------- */
+/* -------------------- HEADER ------------------- */
+/* ----------------------------------------------- */    
+    
     h1 {
         font-size: 300%;
     }
@@ -47,6 +100,10 @@
         line-height: 130%;
     }
 
+/* ----------------------------------------------- */
+/* ---------------- ABOUT SECTION ---------------- */
+/* ----------------------------------------------- */    
+    
     .center {
         text-align: center;
     }
@@ -61,8 +118,13 @@
 
 }
 
+/* On screens that are 479px or less */
 @media only screen and (max-width: 479px) {
 
+/* ----------------------------------------------- */
+/* -------------------- HEADER ------------------- */
+/* ----------------------------------------------- */    
+    
     h1 {
         font-size: 250%;
     }
@@ -73,120 +135,17 @@
         width: 100%
     }
 
-    .profile-image {
-        width: 100%;
-    }
-
-    .section-about p {
-        line-height: 130%;
-        font-size: 80%;
-    }
-
-}
-
-
-
-
-
-
-
-/* On screens that are 575px or less. */
-/*@media screen and (max-width: 574px) {
-
-    .section-about .box {
-        position: relative;
-        height: 400px;
-        width: 100%;
-    }
+/* ----------------------------------------------- */
+/* ---------------- ABOUT SECTION ---------------- */
+/* ----------------------------------------------- */    
     
-    .section-about h3 {
-        font-size: 80%;
-    }
-
-    .section-about h2,
-    .section-about h3 {
-        margin-bottom: 15px;
+    .profile-image {
+        width: 100%;
     }
 
     .section-about p {
         line-height: 130%;
-    }
-
-    .signature {
-        width: 300px;
-    }
-
-   .profile-image {
-        position: relative;
-       width: inherit;
-       height: inherit;
-    }
-}
-
-/* On screens that are 767px or less. */
-/*@media screen and (max-width:768){
-
-    .section-about .box {
-        position: relative;
-        height: 500px;
-    }
-
-    .profile-image {
-        height: 100%;
-        width: 80%;
-        margin: 0 auto;
-    }
-
-    .signature {
-        margin-top: 30px;
-        position: relative;
-    }
-}
-
-/* On screens that are 800px or less. */
-/*@media screen and (max-width: 799px) {
-
-    h2 {
-        font-size: 2em;
-    }
-
-    h2:before,
-    h2:after {
-        width: 15px;
-    }
-
-    .contact-container {
-        width: 100%;
-        margin: 0;
-    }
-
-    .contact-container form div label {
-        font-size: 90%;
-    }
-}
-
-
-/* On screens that are 1200px or less. */
-/*@media screen and (max-width: 1199px) {
-
-    .profile-image {
-        height: 80%;
-    }
-
-    .section-about p {
         font-size: 80%;
     }
 
-    .section-about h3 {
-        font-size: 160%;
-    }
 }
-
-/* On screens that are 1400px or less. */
-/*@media screen and (max-width: 1399px) {
-
-    .profile-image {
-        height: 80%;
-    }
-}
-*/
