--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -61,7 +61,6 @@ html {
 
 .flexbox {
     display: flex;
-    flex-wrap: nowrap;
 }
 
 section,
@@ -340,11 +339,11 @@ header .row {
 }
 
 .section-skills .box {
-    /*background-color: #000;*/
-    width: 100%;
-    height: auto;
-    color: var(--font-color);
+    padding:  0 25px 20px 25px;
+    min-width: 25%;
+    height: 100%;
     text-align: center;
+    color: var(--font-color);
 }
 
 .section-skills i {
@@ -360,7 +359,7 @@ header .row {
 
 .section-skills p {
     text-align: justify;
-    padding: 0 15px;
+    font-size: 80%;
 }
 
 /* ----------------------------------------------- */
