--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -34,7 +34,14 @@
         font-size: 75%;
         line-height: 130%;
     }
-
+ 
+/* ----------------------------------------------- */
+/* -------------- EXPERIENCE SECTION ------------- */
+/* ----------------------------------------------- */    
+    
+    .timeline {
+        width: 100%;
+    }
 }
 
 /* On screens that are 991px or less */
@@ -116,6 +123,45 @@
         width: 80%;
     }
 
+/* ----------------------------------------------- */
+/* -------------- EXPERIENCE SECTION ------------- */
+/* ----------------------------------------------- */ 
+    
+    .timeline {
+        width: 100%;
+        padding-bottom: 0;
+        margin-top: 40px;
+    }
+
+    .timeline:before {
+        top: -10px;
+        left: 20px;
+    }
+
+    .timeline ul li h3 {
+        margin-top: 10px;
+    }
+
+    .timeline ul li:nth-child(odd),
+    .timeline ul li:nth-child(even) {
+        width: 100%;
+        text-align: left;
+        padding-left: 50px;
+        padding-bottom: 50px;
+    }
+
+    .timeline ul li:nth-child(odd):before,
+    .timeline ul li:nth-child(even):before {
+        top: -16px;
+        left: 16px;
+    }
+
+    .timeline ul li:nth-child(odd) .timeline-time,
+    .timeline ul li:nth-child(even) .timeline-time {
+        top: -30px;
+        left: 50px;
+        right: inherit;
+    }
 }
 
 /* On screens that are 479px or less */
