modifying projects section to use flexbox, as well as making whole website responsive

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,10 +1,10 @@
 /* On screens that are 1399px or less */
 @media only screen and (max-width: 1399px) {
 
-/* ----------------------------------------------- */
-/* ---------------- ABOUT SECTION ---------------- */
-/* ----------------------------------------------- */
-    
+    /* ----------------------------------------------- */
+    /* ---------------- ABOUT SECTION ---------------- */
+    /* ----------------------------------------------- */
+
     .section-about h3 {
         font-size: 170%;
         margin-bottom: 20px;
@@ -18,47 +18,56 @@
         width: 100%;
     }
 
-/* ----------------------------------------------- */
-/* ---------------- SKILLS SECTION --------------- */
-/* ----------------------------------------------- */
-    
+    /* ----------------------------------------------- */
+    /* ---------------- SKILLS SECTION --------------- */
+    /* ----------------------------------------------- */
+
     .section-skills i {
         font-size: 250%;
     }
-    
+
     .section-skills h3 {
         font-size: 100%
     }
-    
+
     .section-skills p {
         font-size: 75%;
         line-height: 130%;
     }
- 
-/* ----------------------------------------------- */
-/* -------------- EXPERIENCE SECTION ------------- */
-/* ----------------------------------------------- */    
-    
+
+    /* ----------------------------------------------- */
+    /* -------------- EXPERIENCE SECTION ------------- */
+    /* ----------------------------------------------- */
+
     .timeline {
         width: 100%;
     }
+
+    /* ----------------------------------------------- */
+    /* --------------- CONTACT SECTION --------------- */
+    /* ----------------------------------------------- */
+
+    .contact-container {
+        width: 60%;
+    }
+
 }
 
 /* On screens that are 991px or less */
 @media only screen and (max-width: 991px) {
 
-/* ----------------------------------------------- */
-/* ------------- REUSABLE COMPONENTS ------------- */
-/* ----------------------------------------------- */    
-    
+    /* ----------------------------------------------- */
+    /* ------------- REUSABLE COMPONENTS ------------- */
+    /* ----------------------------------------------- */
+
     .flexbox {
         flex-wrap: wrap;
     }
 
-/* ----------------------------------------------- */
-/* ---------------- ABOUT SECTION ---------------- */
-/* ----------------------------------------------- */    
-    
+    /* ----------------------------------------------- */
+    /* ---------------- ABOUT SECTION ---------------- */
+    /* ----------------------------------------------- */
+
     .about-image-box {
         width: 100%;
     }
@@ -73,44 +82,76 @@
         width: 70%;
     }
 
-/* ----------------------------------------------- */
-/* ---------------- SKILLS SECTION --------------- */
-/* ----------------------------------------------- */
-    
+    /* ----------------------------------------------- */
+    /* ---------------- SKILLS SECTION --------------- */
+    /* ----------------------------------------------- */
+
     .section-skills i {
         font-size: 350%;
     }
-    
+
     .section-skills h3 {
         font-size: 150%
     }
-    
+
     .section-skills p {
         font-size: 90%;
         line-height: 150%;
+    }
+
+    /* ----------------------------------------------- */
+    /* --------------- PROJECTS SECTION -------------- */
+    /* ----------------------------------------------- */
+
+    .section-projects .box {
+        min-width: 100%;
+        padding: 10px 0;
+    }
+
+    /* ----------------------------------------------- */
+    /* --------------- CONTACT SECTION --------------- */
+    /* ----------------------------------------------- */
+
+    .contact-container {
+        width: 70%;
     }
 }
 
 /* On screens that are 767px or less */
 @media only screen and (max-width: 767px) {
 
-/* ----------------------------------------------- */
-/* -------------------- HEADER ------------------- */
-/* ----------------------------------------------- */    
-    
+    /* ----------------------------------------------- */
+    /* ------------- REUSABLE COMPONENTS ------------- */
+    /* ----------------------------------------------- */
+
+    /* ------------------- HEADINGS ------------------ */
+
     h1 {
         font-size: 300%;
     }
+
+    h2 {
+        font-size: 180%
+    }
+
+    h2:before,
+    h2:after {
+        width: 30px;
+    }
+
+    /* ----------------------------------------------- */
+    /* -------------------- HEADER ------------------- */
+    /* ----------------------------------------------- */
 
     .showcase p {
         font-size: 80%;
         line-height: 130%;
     }
 
-/* ----------------------------------------------- */
-/* ---------------- ABOUT SECTION ---------------- */
-/* ----------------------------------------------- */    
-    
+    /* ----------------------------------------------- */
+    /* ---------------- ABOUT SECTION ---------------- */
+    /* ----------------------------------------------- */
+
     .center {
         text-align: center;
     }
@@ -123,10 +164,10 @@
         width: 80%;
     }
 
-/* ----------------------------------------------- */
-/* -------------- EXPERIENCE SECTION ------------- */
-/* ----------------------------------------------- */ 
-    
+    /* ----------------------------------------------- */
+    /* -------------- EXPERIENCE SECTION ------------- */
+    /* ----------------------------------------------- */
+
     .timeline {
         width: 100%;
         padding-bottom: 0;
@@ -162,15 +203,33 @@
         left: 50px;
         right: inherit;
     }
+
+    /* ----------------------------------------------- */
+    /* --------------- CONTACT SECTION --------------- */
+    /* ----------------------------------------------- */
+
+    .contact-container {
+        width: 80%;
+    }
+
+    /* ----------------------------------------------- */
+    /* ------------------- FOOTER -------------------- */
+    /* ----------------------------------------------- */
+
+    .footer-nav li,
+    .footer-nav-social-links li {
+        font-size: 80%;
+        margin-right: 10px;
+    }
 }
 
 /* On screens that are 479px or less */
 @media only screen and (max-width: 479px) {
 
-/* ----------------------------------------------- */
-/* -------------------- HEADER ------------------- */
-/* ----------------------------------------------- */    
-    
+    /* ----------------------------------------------- */
+    /* -------------------- HEADER ------------------- */
+    /* ----------------------------------------------- */
+
     h1 {
         font-size: 250%;
     }
@@ -181,10 +240,10 @@
         width: 100%
     }
 
-/* ----------------------------------------------- */
-/* ---------------- ABOUT SECTION ---------------- */
-/* ----------------------------------------------- */    
-    
+    /* ----------------------------------------------- */
+    /* ---------------- ABOUT SECTION ---------------- */
+    /* ----------------------------------------------- */
+
     .profile-image {
         width: 100%;
     }
@@ -192,6 +251,35 @@
     .section-about p {
         line-height: 130%;
         font-size: 80%;
+    }
+
+    /* ----------------------------------------------- */
+    /* --------------- CONTACT SECTION --------------- */
+    /* ----------------------------------------------- */
+
+    .contact-container {
+        width: 90%;
+    }
+
+    /* ----------------------------------------------- */
+    /* ------------------- FOOTER -------------------- */
+    /* ----------------------------------------------- */
+
+    .footer-nav li,
+    .footer-nav-social-links li {
+        float: none;
+    }
+    
+    .footer-nav-social-links li {
+        margin-top: 20px;
+    }
+
+    .footer-nav-social-links li:first-of-type {
+        margin-right: 10px;
+    }
+    
+    footer p {
+        text-align: center;
     }
 
 }
