--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,3 +1,13 @@
+/* On screens that are 1399px or more */
+@media only screen and (min-width: 1399px) {
+    /* ----------------------------------------------- */
+    /* --------------- PROJECT SECTION --------------- */
+    /* ----------------------------------------------- */
+
+    /* --------------- MODAL SLIDESHOW --------------- */
+
+}
+
 /* On screens that are 1399px or less */
 @media only screen and (max-width: 1399px) {
 
@@ -50,6 +60,18 @@
     .contact-container {
         width: 60%;
     }
+
+    /* ----------------------------------------------- */
+    /* --------------- PROJECT SECTION --------------- */
+    /* ----------------------------------------------- */
+
+    /* --------------- MODAL SLIDESHOW --------------- */
+
+    .slide-text-box p {
+        line-height: 1.2;
+        font-size: 80%;
+    }
+
 
 }
 
@@ -115,6 +137,36 @@
     .contact-container {
         width: 70%;
     }
+
+    /* ----------------------------------------------- */
+    /* --------------- PROJECT SECTION --------------- */
+    /* ----------------------------------------------- */
+
+    .slide-text-box,
+    .slide-image-box {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .slide-text-box {
+        max-height: 40%;
+        min-height: 40%;
+        padding: 0;
+    }
+    
+    .slide-image-box {
+        max-height: 60%;
+        min-height: 60%;
+    }
+    
+    .btn-prev,
+    .btn-next {
+        top: 68%;
+    }
+    
+    
+    /* --------------- MODAL SLIDESHOW --------------- */
+
 }
 
 /* On screens that are 767px or less */
@@ -221,6 +273,15 @@
         font-size: 80%;
         margin-right: 10px;
     }
+    
+    /* ----------------------------------------------- */
+    /* --------------- PROJECT SECTION --------------- */
+    /* ----------------------------------------------- */
+    
+    .slide-text-box p{
+        font-size: 60%;
+    }
+    
 }
 
 /* On screens that are 479px or less */
@@ -269,7 +330,7 @@
     .footer-nav-social-links li {
         float: none;
     }
-    
+
     .footer-nav-social-links li {
         margin-top: 20px;
     }
@@ -277,9 +338,17 @@
     .footer-nav-social-links li:first-of-type {
         margin-right: 10px;
     }
-    
+
     footer p {
         text-align: center;
+    }
+    
+    /* ----------------------------------------------- */
+    /* --------------- PROJECT SECTION --------------- */
+    /* ----------------------------------------------- */
+    
+    .slide-text-box p{
+        font-size: 50%;
     }
 
 }
