--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,7 @@
     --primary-color-light: rgba(0, 182, 180, 0.4);
     --overlay-color: rgba(0, 0, 0, 0.6);
     --font-color: #969696;
+    --font-color-light: #bbb;
     --slightly-white: #f8f8f8;
     --menu-speed: 0.75s;
 }
@@ -63,7 +64,7 @@ html {
     display: flex;
 }
 
-section{
+section {
     padding: 60px 0;
 }
 
@@ -146,6 +147,13 @@ input[type="submit"] {
 .btn-ghost {
     border-radius: 50%;
     padding: 4px 10px;
+    font-size: 90%;
+}
+
+.btn-square {
+    padding: 10px 20px;
+    color: #FFF;
+    background-color: var(--primary-color-dark);
 }
 
 .btn-full,
@@ -160,6 +168,8 @@ input[type="submit"] {
 
 .btn-full:hover,
 .btn-full:active,
+.btn-square:hover,
+.btn-square:active,
 input[type="submit"]:hover,
 input[type="submit"]:active {
     color: #FFF;
@@ -524,8 +534,70 @@ header .row {
 }
 
 .section-projects .box {
-    min-width: 50%;
-    padding: 10px
+    position: relative;
+    min-width: 48%;
+    margin: 1%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    transition: background 0.5s ease;
+}
+
+.section-projects .box:hover .overlay {
+    display: block;
+    background: rgba(0, 0, 0, .3);
+}
+
+.title,
+.section-projects .btn {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.title {
+    /*position: absolute;
+    width: 100%;
+    left: 0;
+    top: 180px;*/
+    font-size: 150%;
+    text-align: center;
+    color: white;
+    z-index: 1;
+    transition: top .5s ease;
+}
+
+.section-projects .box:hover .title {
+    top: 30%;
+}
+
+.section-projects .btn {
+    opacity: 0;
+}
+
+.section-projects .box .btn {
+    color: #FFF;
+    margin-top: 0;
+    z-index: 1;
+    transition: all 0.2s ease-in-out;
+}
+
+.section-projects .box .btn:hover,
+.section-projects .box .btn:active {
+    color: var(--primary-color);
+}
+
+.section-projects .box:hover .btn {
+    opacity: 1;
+    transition: opacity 0.5s ease;
+    cursor: pointer;
 }
 
 .blue {
@@ -557,6 +629,230 @@ header .row {
 .section-projects .btn-ghost:hover,
 .section-projects .btn-ghost:active {
     color: #FFF;
+}
+
+/* --------------------- MODAL ------------------- */
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+
+.modal-content {
+    position: relative;
+    background-color: var(--slightly-white);
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 90%;
+    height: auto;
+    /* Could be more or less, depending on screen size */
+}
+
+.modal-container {
+    position: relative;
+    /*background-color: aqua;*/
+    width: 100%;
+    height: 100%;
+}
+
+.modal-container .flexbox {
+    min-height: 100%;
+    max-height: 100%;
+}
+
+/* The Close Button */
+.btn-exit {
+    line-height: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding:  0 4px;
+    color: var(--font-color-light);
+    font-size: 160%;
+    z-index: 2;
+    transition: color 0.2s ease;
+}
+
+.btn-exit:hover,
+.btn-exit:focus {
+    color: var(--font-color);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* --------------- MODAL SLIDESHOW --------------- */
+
+.slide-text-box,
+.slide-image-box {
+    position: relative;
+    height: 100%;
+    width: auto;
+}
+
+.slide-text-box {
+    color: var(--font-color);
+    text-align: left;
+    padding: 30px 20px 30px 40px;
+    float: left;
+    width: 40%;
+    min-height: 100%;
+    /*background-color: antiquewhite;*/
+}
+
+.slide-image-box {
+    float: left;
+    width: 60%;
+    height: 100%;
+    /*background-color: salmon;*/
+}
+
+.slide-image-box img {
+    display: block;
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+
+.slide-text-box h4 {
+    margin-bottom: 10px;
+}
+
+.slide-text-box p {
+    text-align: justify;
+}
+
+/*
+.slideshow-container {
+    width: 100%;
+    max-height: 100%;
+    position: relative;
+    margin: auto;
+}
+
+.slides {
+    display: none;
+}
+
+.slide-text-box,
+.slide-image-box {
+    position: relative;
+    max-height: 100%;
+    width: auto;
+    margin-bottom: 0;
+}
+
+.slide-text-box {
+    width: 35%;
+    height: 100%;
+}
+
+.slide-image-box {
+    max-height: 100%;
+    width: 65%;
+}
+
+.slideshow-image {
+    max-width:100%;
+    max-height:100%;
+}
+*/
+
+.btn-prev,
+.btn-next {
+    position: absolute;
+    top: 50%;
+    margin: 0 auto;
+    cursor: pointer;
+    color: var(--font-color-light);
+    padding:  0 4px;
+    font-size: 160%;
+    transition: color 0.2s ease;
+}
+
+.btn-prev {
+    left: 0;
+}
+
+.btn-next {
+    right: 0;
+}
+
+.btn-prev:hover,
+.btn-prev:active,
+.btn-next:hover,
+.btn-next:active {
+    color: var(--font-color);
+}
+
+.dots-container {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    height: 20px;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    position: relative;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: var(--font-color-light);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active
+{
+    background-color: var(--font-color);
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 /* ----------------------------------------------- */
